[package]
name = "nirvana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nirvana"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
pyth-client = {version = "0.5.0", features = ["no-entrypoint"]}
rust_decimal = {version = "1.19", features = ["maths"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
